fix alignment issue

--- a/deepfence_ui/app/scripts/components/common/df-table-v2/index.module.scss
+++ b/deepfence_ui/app/scripts/components/common/df-table-v2/index.module.scss
@@ -19,6 +19,8 @@
 
     .headerContent {
       width: 100%;
+      display: flex;
+      align-items: flex-start;
     }
 
     .headerCellResizer {
